--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "msal-vue-sample",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "build:package": "cd ../../../lib/msal-browser && npm run build:all",
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^2.30.0",
+    "axios": "^1.3.3",
     "element-plus": "^2.2.19",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/microsoft-graph": "^2.26.0",
+    "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^3.1.2",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "prettier": "2.8.4",
     "typescript": "^4.8.4",
     "vite": "^3.1.8",
     "vue-tsc": "^1.0.8"
